NFT TO ACTION
Since this api is about actions not nfts. All nft mentions are converted to actions
